votes button work in progress

--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -24,10 +24,10 @@
             <form string="Alunni">
                 <sheet>
                     #BUTTON
-                    <div class="oe_button_box" name="button box">
+                    <!--<div class="oe_button_box" name="button box">
                         <button name="open_student_votes" string="Voti" type="object" class="oe_stat_button">
                         </button>
-                    </div>
+                    </div>   -->
 
                     <group>
                         <group>
