--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -24,8 +24,7 @@
             <form string="Alunni">
                 <sheet>
                     <div class="oe_button_box" name="button_box">
-                        <button name="open_student_votes" string="Voti"  class="oe_stat_button" type="object" >
-
+                        <button name="alunno_voti" string="Voti"  class="oe_stat_button" type="object">
                         </button>
                     </div>
                     <group>
