--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -9,6 +9,7 @@
             <tree string="Alunni">
                 <field name="nome_alunno"/>
                 <field name="cognome_alunno"/>
+                <field name="classe_alunno"/>
                 <field name="anni_alunno"/>
                 <field name="note_alunno"/>
                 <field name="foto_alunno"/>
@@ -35,6 +36,7 @@
                         </group>
                         <group>
                             <field name="anni_alunno"/>
+                            <field name="classe_alunno"/>
                         </group>
                     </group>
                     <group>
