--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -46,7 +46,7 @@
         </field>
     </record>
 
-    <record id="view_voti_x_alunno_form" model="ir.ui.view">
+    <record id="alunno_voti_form" model="ir.ui.view">
             <field name="name">scuola.alunno.voti.form</field>
             <field name="model">scuola.alunno</field>
             <field name="arch" type="xml">
@@ -115,6 +115,6 @@
 
     <menuitem id="scuola_modulo" name="Scuola" sequence="0"/>
     <menuitem id="scuola_alunno" name="Alunni" parent="scuola_modulo" action="action_alunno"/>
-    <menuitem id="scuola_alunno_MD" name="Registra voti" parent="scuola_modulo" action="view_voti_x_alunno_form"/>
+    <menuitem id="scuola_alunno_MD" name="Registra voti" parent="scuola_modulo" action="alunno_voti_form"/>
 
 </odoo>
