--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -115,6 +115,6 @@
 
     <menuitem id="scuola_modulo" name="Scuola" sequence="0"/>
     <menuitem id="scuola_alunno" name="Alunni" parent="scuola_modulo" action="action_alunno"/>
-  
+    <menuitem id="scuola_alunno_MD" name="Registra voti" parent="scuola_modulo" action="alunno_voti_form"/>
 
 </odoo>
