--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -41,6 +41,17 @@
                         <field name="note_alunno"/>
                         <field name="foto_alunno"/>
                     </group>
+                    <notebook>
+                        <page string="ASSENZE">
+                            <field name="assenze_alunno">
+                                <tree editable="bottom">
+                                    <field name="as_alunno_id" invisible="1"/>
+                                    <field name="assenza_data"/>
+                                    <field name="assenza_giustificata"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
