--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -12,9 +12,11 @@
                 <field name="anni_alunno"/>
                 <field name="note_alunno"/>
                 <field name="foto_alunno"/>
+                <field name="classe_alunno"/>
             </tree>
         </field>
     </record>
+
 
     #modalità visualizzazione FORM
     <record id="alunno_form" model="ir.ui.view">
@@ -35,6 +37,7 @@
                         </group>
                         <group>
                             <field name="anni_alunno"/>
+                            <field name="classe_alunno"/>
                         </group>
                     </group>
                     <group>
