--- a/views/classe.xml
+++ b/views/classe.xml
@@ -51,7 +51,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">scuola.classi</field>
         <field name="view_type">form</field>
-        <field name="view_mode">kanban,form</field>
+        <field name="view_mode">kanban,tree,form</field>
         <field name="help" type="html">
             <p class="o_view_nocontest_smiling_face">
                 Aggiungi classe!
