--- a/views/classe.xml
+++ b/views/classe.xml
@@ -1,5 +1,27 @@
 <odoo>
 
+    <record id="classi_kanban" model="ir.ui.view">
+        <field name="name">scuola.classi.kanban</field>
+        <field name="model">scuola.classi</field>
+        <field name="priority">10</field>
+        <field name="arch" type="xml">
+            <kanban>
+                <field name = "nome_classe"/>
+            <templates>
+                <t t-name="kanban-box">
+                    <div>
+                        <ul>
+                            <li t-if="record.name.raw_value">Class Name: <field name="nome_classe"/></li>
+                        </ul>
+                    </div>
+                </t>
+            </templates>
+            </kanban>
+        </field>
+    </record>
+
+
+
     <record id="classi_tree" model="ir.ui.view">
         <field name="name">scuola.classi.tree</field>
         <field name="model">scuola.classi</field>
@@ -16,9 +38,9 @@
         <field name="arch"  type="xml">
             <form string="Voti">
                 <sheet>
-                        <group>
-                            <field name="nome_classe"/>
-                        </group>
+                    <group>
+                        <field name="nome_classe"/>
+                    </group>
                 </sheet>
             </form>
         </field>
@@ -30,7 +52,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">scuola.classi</field>
         <field name="view_type">form</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
         <field name="help" type="html">
             <p class="o_view_nocontest_smiling_face">
                 Aggiungi classe!
