--- a/views/classe.xml
+++ b/views/classe.xml
@@ -6,10 +6,10 @@
         <field name="priority">10</field>
         <field name="arch" type="xml">
             <kanban>
-                <field name = "nome_classe"/>
+                <field name = "nome_classe" align="center"/>
             <templates>
                 <t t-name="kanban-box">
-                    <div align="center">
+                    <div>
                         <ul>
                           <field name = "nome_classe"/>
                         </ul>
