--- a/views/classe.xml
+++ b/views/classe.xml
@@ -12,6 +12,7 @@
                     <div>
                         <ul>
                           <field name = "nome_classe"/>
+                          <field name = "classe_id"/>
                         </ul>
                     </div>
                 </t>
