--- a/views/classe.xml
+++ b/views/classe.xml
@@ -1,28 +1,5 @@
 <odoo>
 
-    <record id="classi_kanban" model="ir.ui.view">
-        <field name="name">scuola.classi.kanban</field>
-        <field name="model">scuola.classi</field>
-        <field name="priority">10</field>
-        <field name="arch" type="xml">
-            <kanban>
-                <field name = "nome_classe" align="center"/>
-            <templates>
-                <t t-name="kanban-box">
-                    <div>
-                        <ul>
-                          <field name = "nome_classe"/>
-                          <field name = "classe_id"/>
-                        </ul>
-                    </div>
-                </t>
-            </templates>
-            </kanban>
-        </field>
-    </record>
-
-
-
     <record id="classi_tree" model="ir.ui.view">
         <field name="name">scuola.classi.tree</field>
         <field name="model">scuola.classi</field>
@@ -53,7 +30,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">scuola.classi</field>
         <field name="view_type">form</field>
-        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_mode">tree,form</field>
         <field name="help" type="html">
             <p class="o_view_nocontest_smiling_face">
                 Aggiungi classe!
