--- a/views/classe.xml
+++ b/views/classe.xml
@@ -17,7 +17,15 @@
             <form string="Voti">
                 <sheet>
                     <group>
-                        <field name="nome_classe"/>
+                       <field name="scuola_alunni">
+                            <field name="model">scuola.alunno</field>
+                            <tree editable="bottom">
+                                <field name="nome_alunno"/>
+                                <field name="cognome_alunno"/>
+                                <field name="anni_alunno"/>
+                                <field name="note_alunno"/>
+                            </tree>
+                        </field>
                     </group>
                 </sheet>
             </form>
