--- a/views/classe.xml
+++ b/views/classe.xml
@@ -10,26 +10,55 @@
         </field>
     </record>
 
-     <record id="classi_form" model="ir.ui.view">
-        <field name="name">scuola.classi.form</field>
-        <field name="model">scuola.classi</field>
+
+        #modalità visualizzazione FORM
+    <record id="alunno_form_" model="ir.ui.view">
+        <field name="name">scuola.alunno.form_</field>
+        <field name="model">scuola.alunno</field>
         <field name="arch"  type="xml">
-            <form string="Voti">
+            <form string="Alunni">
                 <sheet>
+               <!--     <div class="oe_button_box" name="button_box" visible="0">
+                        <button name="alunno_voti" string="Voti" icon="fa-edit"
+                                class="oe_stat_button" type="object" >
+                        </button>
+                    </div>  -->
                     <group>
-                        <sheet>
-                           <field name="scuola_alunni">
-                                <field name="model">scuola.alunno</field>
+                        <group>
+                            <field name="nome_alunno"/>
+                            <field name="cognome_alunno"/>
+                        </group>
+                        <group>
+                            <field name="anni_alunno"/>
+                            <field name="classe_alunno"/>
+                        </group>
+                    </group>
+                    <group>
+                        <field name="note_alunno"/>
+                        <field name="foto_alunno"/>
+                    </group>
+                    <notebook>
+                        <page string="VOTI">
+                            <field name="voti_alunno">
+                                <field name="model">scuola.voti</field>
                                 <tree editable="bottom">
-                                    <field name="nome_alunno"/>
-                                    <field name="cognome_alunno"/>
-                                    <field name="anni_alunno"/>
-                                    <field name="note_alunno"/>
-                                    <field name="classe_alunno"/>
+                                    <field name="alunno_id" invisible="1"/>
+                                    <field name="voto_materia"/>
+                                    <field name="voto_data"/>
+                                    <field name="voto_alunno" string="voto"/>
                                 </tree>
                             </field>
-                        </sheet>
-                    </group>
+                        </page>
+                          <page string="ASSENZE">
+                            <field name="assenze_alunno">
+                            <field name="model">scuola.assenze</field>
+                                <tree editable="bottom">
+                                    <field name="assenza_data"/>
+                                    <field name="assenza_giustificata" string="Giustifica"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
