--- a/views/classe.xml
+++ b/views/classe.xml
@@ -16,17 +16,12 @@
         <field name="arch"  type="xml">
             <form string="Voti">
                 <sheet>
+                    <div class="oe_button_box" name="button_box" visible="0">
+                        <button name="classe_alunno" string="ALUNNI" icon="fa-male"
+                                class="oe_stat_button" type="object" >
+                        </button>
                     <group>
-                           <field name="scuola_alunni">
-                                <field name="model">scuola.alunno</field>
-                                <tree editable="bottom">
-                                    <field name="nome_alunno"/>
-                                    <field name="cognome_alunno"/>
-                                    <field name="anni_alunno"/>
-                                    <field name="note_alunno"/>
-                                    <field name="classe_alunno"/>
-                                </tree>
-                            </field>
+                        <field name="nome_classe"/>
                     </group>
                 </sheet>
             </form>
