--- a/views/classe.xml
+++ b/views/classe.xml
@@ -17,7 +17,7 @@
             <form string="Voti">
                 <sheet>
                     <div class="oe_button_box" name="button_box" visible="0">
-                        <button name="classe_alunno" string="ALUNNI" icon="fa-male"
+                        <button name="classe_id" string="ALUNNI" icon="fa-male"
                                 class="oe_stat_button" type="object" >
                         </button>
                     </div>
