--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -26,7 +26,7 @@
             <form string="Alunni">
                 <sheet>
                <!--     <div class="oe_button_box" name="button_box" visible="0">
-                        <button name="alunno_voti" string="Voti" icon="fa-edit"
+                        <button name="voti_alunno" string="Voti" icon="fa-edit"
                                 class="oe_stat_button" type="object" >
                         </button>
                     </div>  -->
