--- a/views/classe.xml
+++ b/views/classe.xml
@@ -22,6 +22,57 @@
                         </button>
                     </div>
                     <group>
+                        <field name="name">scuola.alunno.form</field>
+        <field name="model">scuola.alunno</field>
+        <field name="arch"  type="xml">
+            <form string="Alunni">
+                <sheet>
+               <!--     <div class="oe_button_box" name="button_box" visible="0">
+                        <button name="voti_alunno" string="Voti" icon="fa-edit"
+                                class="oe_stat_button" type="object" >
+                        </button>
+                    </div>  -->
+                    <group>
+                        <group>
+                            <field name="nome_alunno"/>
+                            <field name="cognome_alunno"/>
+                        </group>
+                        <group>
+                            <field name="anni_alunno"/>
+                            <field name="classe_alunno"/>
+                        </group>
+                    </group>
+                    <group>
+                        <field name="note_alunno"/>
+                        <field name="foto_alunno"/>
+                    </group>
+                    <notebook>
+                        <page string="VOTI">
+                            <field name="voti_alunno">
+                                <field name="model">scuola.voti</field>
+                                <tree editable="bottom">
+                                    <field name="alunno_id" invisible="1"/>
+                                    <field name="voto_materia"/>
+                                    <field name="voto_data"/>
+                                    <field name="voto_alunno" string="voto"/>
+                                </tree>
+                            </field>
+                        </page>
+                          <page string="ASSENZE">
+                            <field name="assenze_alunno">
+                            <field name="model">scuola.assenze</field>
+                                <tree editable="bottom">
+                                    <field name="assenza_data"/>
+                                    <field name="assenza_giustificata" string="Giustifica"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+                    </group>
+                    <group>
                         <field name="nome_classe"/>
                     </group>
                 </sheet>
