--- a/views/classe.xml
+++ b/views/classe.xml
@@ -16,11 +16,12 @@
         <field name="arch"  type="xml">
             <form string="Voti">
                 <sheet>
-                    <div class="oe_button_box" name="button_box">
-                        <button name="classe_id" string="ALUNNI" icon="fa-male"
+                    <!--  <div class="oe_button_box" name="button_box">
+                          <button name="classe_id" string="ALUNNI" icon="fa-male"
                                 class="oe_stat_button" type="object" >
                         </button>
                     </div>
+                    -->
                     <group>
                         <field name="name">scuola.alunno.form</field>
                         <field name="model">scuola.alunno</field>
