--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -70,8 +70,7 @@
             </form>
         </field>
     </record>
-
-
+    
     <record id="action_alunno" model="ir.actions.act_window">
         <field name="name">Alunni</field>
         <field name="type">ir.actions.act_window</field>
@@ -87,5 +86,7 @@
 
     <menuitem id="scuola_modulo" name="Scuola" sequence="0"/>
     <menuitem id="scuola_alunno" name="Alunni" parent="scuola_modulo" action="action_alunno"/>
+    <menuitem id="Voti_sub" name="Voti" parent="scuola_alunno" action="ERP-a-Scuola.scuola_voti" sequence="1"/>
+
 
 </odoo>
