--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -71,6 +71,18 @@
         </field>
     </record>
 
+     #Menù
+    <record id="action_scuola_voti" model="ir.actions.act_window">
+        <field name="name">Voti</field>
+    </record>
+
+    <menuitem id="ERP-s-Scuola.scuola_voti"
+            name="Voti"
+            action="action_scuola_voti"
+            parent="scuola_alunno"
+            sequence="2"/>
+
+
     <record id="action_alunno" model="ir.actions.act_window">
         <field name="name">Alunni</field>
         <field name="type">ir.actions.act_window</field>
@@ -84,22 +96,8 @@
         </field>
     </record>
 
-    <record id="action_voto_" model="ir.actions.act_window">
-        <field name="name">Voti</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">scuola.voti</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">tree,form</field>
-        <field name="help" type="html">
-            <p class="o_view_nocontest_smiling_face">
-                Inserisci il voto!
-            </p>
-        </field>
-    </record>
-
     <menuitem id="scuola_modulo" name="Scuola" sequence="0"/>
     <menuitem id="scuola_alunno" name="Alunni" parent="scuola_modulo" action="action_alunno"/>
-    <menuitem id="Voti_sub" name="Voti" parent="scuola_alunno" action="action_voto_" sequence="1"/>
 
 
 </odoo>
