--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -84,7 +84,7 @@
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_global_click">
                             <div>
-                                <img t-att-src="kanban_image('scuola.alunno', 'foto_alunno', record.id.raw_value)" t-att-title="record.id.value" t-att-alt="record.id.value" width="24" height="24" class="oe_kanban_avatar mr4"/>
+                                <img t-att-src="kanban_image('scuola.alunno', 'foto_alunno')" t-att-title="record.id.value" t-att-alt="record.id.value" width="24" height="24" class="oe_kanban_avatar mr4"/>
                                 <span class="o_kanban_record_title">
                                     <strong><t t-esc="record.alunno_id.value"/></strong>
                                 </span>
