--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -86,7 +86,7 @@
                             <div>
                                 <!--img t-att-src="kanban_image('scuola.alunno', 'foto_alunno')" t-att-title="record.id.value" t-att-alt="record.id.value" width="24" height="24" class="oe_kanban_avatar mr4"/-->
                                 <span class="o_kanban_record_title">
-                                    <strong><t t-esc="id.value"/></strong>
+                                    <!--strong><t t-esc="id.value"/></strong-->
                                 </span>
                             </div>
                             <hr class="mt4 mb8"/>
