--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -76,6 +76,7 @@
         <field name="model">scuola.alunno</field>
         <field name="arch" type="xml">
             <kanban class="o_kanban_mobile">
+                <field name="id"/>
                 <field name="nome_alunno"/>
                 <field name="cognome_alunno"/>
                 <!--field name="check_in"/-->
@@ -85,17 +86,17 @@
                         <div t-attf-class="oe_kanban_global_click">
                             <div>
                                 <field name="foto_alunno" widget="image" height="130" width="130"/>
-                                <!--img t-att-src="kanban_image('scuola.alunno', 'foto_alunno')" t-att-title="record.id.value" t-att-alt="record.id.value" width="24" height="24" class="oe_kanban_avatar mr4"/-->
+                                <img t-att-src="kanban_image('scuola.alunno', 'foto_alunno', 'record.id.raw_value')" t-att-title="record.id.value" t-att-alt="record.id.value" width="24" height="24" class="oe_kanban_avatar mr4"/>
                                 <span class="o_kanban_record_title">
                                      
-                                    <!--strong><t t-esc="id.value"/></strong-->
+                                    <strong><t t-esc="record.id.value"/></strong-->
                                 </span>
                             </div>
                             <hr class="mt4 mb8"/>
                             <div class="o_kanban_record_subtitle">
                                 <i class="fa fa-calendar" aria-label="Period" role="img" title="Period"></i>
-                                <field name="nome_alunno"/>
-                                <field name="cognome_alunno"/>
+                                <t t-esc="record.nome_alunno.value"/>
+                                <t t-esc="record.cognome_alunno.value"/>
                             </div>
                         </div>
                     </t>
