--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -88,8 +88,7 @@
                                 <field name="foto_alunno" widget="image" height="130" width="130"/>
                                 <img t-att-src="kanban_image('scuola.alunno', 'foto_alunno', 'record.id.raw_value')" t-att-title="record.id.value" t-att-alt="record.id.value" width="24" height="24" class="oe_kanban_avatar mr4"/>
                                 <span class="o_kanban_record_title">
-                                     
-                                    <strong><t t-esc="record.id.value"/></strong-->
+                                    <strong><t t-esc="record.id.value"/></strong>
                                 </span>
                             </div>
                             <hr class="mt4 mb8"/>
