--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -86,7 +86,7 @@
                     <t t-name="kanban-box">
                         <div t-attf-class="oe_kanban_global_click">
                             <div>
-                                <field name="foto_alunno" widget="image" height="130" width="130"/>
+                                <!--field name="foto_alunno" widget="image" height="130" width="130"/-->
                                 <img t-att-src="kanban_image('scuola.alunno', 'image_small', 'record.foto_alunno.raw_value')" t-att-title="record.id.value" t-att-alt="record.id.value" width="24" height="24" class="oe_kanban_avatar mr4"/>
                                 <span class="o_kanban_record_title">
                                     <strong><t t-esc="record.id.value"/></strong>
