--- a/views/alunno.xml
+++ b/views/alunno.xml
@@ -80,7 +80,7 @@
         <field name="arch" type="xml">
             <xpath expr="//button[@name='toggle_active']" position="before">
                 <field name="attendance_state" invisible="1"/>
-                <button name="%(hr_attendance_action_employee)d"
+                <!--button name="%(hr_attendance_action_employee)d"
                     class="oe_stat_button"
                     type="action" attrs="{'invisible': [('attendance_state', '=', False)]}">
                     <div role="img" id="oe_hr_attendance_status" class="fa fa-fw fa-circle o_button_icon oe_hr_attendance_status_green" attrs="{'invisible': [('attendance_state', '=', 'checked_out')]}" aria-label="Available" title="Available"/>
@@ -88,7 +88,7 @@
                     <div class="o_stat_info">
                         <span class="o_stat_text">Attendance</span>
                     </div>
-                </button>
+                </button-->
             </xpath>
             <xpath expr="//group[@name='active_group']" position="after">
                 <group string='Attendance' groups="hr_attendance.group_hr_attendance_user">
